--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
        */
       Hull.init({
         // debug: true, // Uncomment this line to display more logs in the console
-        appId: "%%YOUR_APPLICATION_ID%%",
-        orgUrl: "%%YOUR_ORGANIZATION_URL%%"      
+        appId: "519a6f58f035ae49380019ab",
+        orgUrl: "http://26b44426.hullapp.io"      
       });
     </script>
 
